RESOLVED FIXED119345
REGRESSION (r153406): DOM intervals are not properly restarted when resumed
https://bugs.webkit.org/show_bug.cgi?id=119345
Summary REGRESSION (r153406): DOM intervals are not properly restarted when resumed
Alexey Proskuryakov
Reported 2013-07-31 11:23:24 PDT
If a page in page cache had a repeating DOM timer running, it will become non-repeating when restored from page cache.
Attachments
proposed fix (1.44 KB, patch)
2013-07-31 11:26 PDT, Alexey Proskuryakov
sam: review+
Alexey Proskuryakov
Comment 1 2013-07-31 11:26:58 PDT
Created attachment 207865 [details] proposed fix
Alexey Proskuryakov
Comment 2 2013-07-31 11:47:59 PDT
Note You need to log in before you can comment on or make changes to this bug.