        REGRESSION (r153406): DOM intervals are not properly restarted when resumed         https://bugs.webkit.org/show_bug.cgi?id=119345

Reviewed by Sam Weinig.

        * page/SuspendableTimer.cpp: (WebCore::SuspendableTimer::suspend): Call base class
        version of repeatInterval(), not our version that will just return the current value
        of m_savedRepeatInterval in this situation.



Canonical link: https://commits.webkit.org/137292@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153531 268f45cc-cd09-0410-ab3c-d52691b4dbfc